--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Text:</strong>
-  <%= @post.text %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="container">
+  <div class="row">
+    <h1>HashtAggie's blog</h1>
+    <div class="col s4">
+      <p class="flow-text"><p>
+        <strong>Title:</strong>
+        <%= @post.title %>
+      </p>
+    </div>
+  </div>
+    <div class="col s4">
+      <p class="flow-text">
+        <p>
+        <strong>Text:</strong>
+        <%= @post.text %>
+        </p>
+      </p>
+    </div>
+    <div class="col s4">
+      <p class="flow-text"><%= link_to 'Edit', edit_post_path(@post) %> |
+      <%= link_to 'Back', posts_path %> |
+      <%= link_to 'Delete', @post, :method => :delete, :confirm => "Are you sure?" %>
+    </p>
+    </div>
