--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,6 @@
 .round-image-50 {
     background-color: white;
-    border: 1px solid #d9d9d9;
+    border: 0.3px solid #ffffff;
     border-radius: 25px;
     -moz-border-radius: 25px;
     -webkit-border-radius: 25px;
