--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,6 +2,11 @@
 
 
 <h1>Edit Posts</h1>
+
+<% if admin_signed_in? %>
+<%= render "form" %>
+<% end %>
+
 <%= form_for @post do |f| %>
 
 <% if @post.errors.any? %>
@@ -21,6 +26,11 @@
 <p>
    <%= f.label :text %><br />
    <%= f.text_area :text %><br />
+</p>
+
+<p>
+  <%= f.file_field :image %></br>
+  <%= f.hidden_field :image_cache %>
 </p>
 
 <p>
