--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New post</h1>
+<div class="container">
+<div class="row">
+  <h2> <h1>New post</h1></h2>
+  <div class="col s4">
+    <p class="flow-text"><%= render 'form' %></p>
+    </div>
 
-<%= render 'form' %>
+  </div>
+  <div class="col s4">
+    <p class="flow-text"></p>
+  </div>
+  <div class="col s4">
+    <p class="flow-text"></p>
+  </div>
 
-<%= link_to 'Back', posts_path %>
+
+  <p><%= link_to "Back", root_path %></p>
