--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,21 @@
+
+<div class="container">
+<div class="row">
   <h1> The moment I decided to start coding ... </h1>
+  <div class="col s4">
+    <p class="flow-text"></p>
+    </div>
+
+  </div>
+  <div class="col s4">
+    <p class="flow-text"></p>
+  </div>
+  <div class="col s4">
+    <p class="flow-text"></p>
+  </div>
 
 
-  <p><%= link_to "Back", root_path %></p>
+
+
+
+<p><%= link_to "Back", root_path %></p>
