--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,10 +1,17 @@
+<div class="container">
+<div class="row">
+  <h2> Want to say hi or arange a meet up? </h2>
+  <div class="col s4">
+    <p class="flow-text"></p>
+    </div>
 
-<h2> Want to say hi or arange a meet up? </h2>
-
-
-
-
-
+  </div>
+  <div class="col s4">
+    <p class="flow-text"></p>
+  </div>
+  <div class="col s4">
+    <p class="flow-text"></p>
+  </div>
 
 
   <p><%= link_to "Back", root_path %></p>
