--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,2 @@
-<div class="container">
-<div class="row">
-  <h2></h2>
-  <div class="col s4">
-    <p class="flow-text"></p>
-    </div>
 
-  </div>
-  <div class="col s4">
-    <p class="flow-text"></p>
-  </div>
-  <div class="col s4">
-    <p class="flow-text"></p>
-  </div>
+<%= image_tag("wander.jpg") %>
