--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,15 +16,33 @@
         </p>
       </p>
     </div>
-      <div>
-        <div class="col s4">
-          <p class="flow-text">
-            <p><%=image_tag @post.image_url.to_s %>
-            </p>
-          </p>
+    <div class="col s4">
+      <p class="flow-text">
+        <p><%=image_tag @post.image_url.to_s %>
+        </p>
+      </p>
+    </div>
+      <h3> Comments </h3>
+      <% @post.comments.each do |comment| %>
+        <p>
+          <b>Comment:</b>
+          <%= comment.content %>
+        </p>
+       <% end %>
+
+      <h5>Add a comment:</h5>
+      <%= form_for([@post, @post.comments.build]) do |f| %>
+        <div class="field">
+         <%= f.label :comment %> <br />
+          <%= f.text_area :content %>
         </div>
-        <br>
-        <%= link_to 'Edit', edit_post_path(@post) %> |
-        <%= link_to 'Back', posts_path %> |
-        <%= link_to 'Delete', @post, :method => :delete, :confirm => "Are you sure?" %>
+        <div class="actions">
+          <%= f.submit %>
+        </div>
+       <% end %>
+
+      <%= link_to 'Edit', edit_post_path(@post) %> |
+      <%= link_to 'Back', posts_path %> |
+      <%= link_to 'Delete', @post, :method => :delete, :confirm => "Are you sure?" %>
+ </div>
 </div>
