--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,16 +7,23 @@
         <h2><%= link_to post.title, post %></h2>
           <% end %></p></div>
 
-    </div>
     <div class="col s4">
       <p class="flow-text"></p>
     </div>
     <div class="col s4">
       <p class="flow-text"></p>
     </div>
-
+  </div>
+</div>
 
 
 <br/>
-
+<% if current_user %>
 <%= link_to 'New post', new_post_path %>
+<% end %>
+
+<% if current_user %>
+<%= link_to "Log out", destroy_user_session_path, method: :delete %>
+<% else %>
+<%= link_to "Log In", new_user_session_path %>
+<% end %>
