--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,6 +43,8 @@
 
       <%= link_to 'Edit', edit_post_path(@post) %> |
       <%= link_to 'Back', posts_path %> |
+      <% if current_user %>
       <%= link_to 'Delete', @post, :method => :delete, :confirm => "Are you sure?" %>
+      <% end %>
  </div>
 </div>
